# Hill_hx50

./: .gitignore
Application/: CMakeLists.txt
Application/src/executable/: CMakeLists.txt
Application/src/executable/src/: hill_main.cpp
Application/src/plugin/: CMakeLists.txt
Application/src/plugin/src/: hill.cpp  hill.hpp  hill.rc  hill_module.cpp  hill_module.hpp  resource.h
Tool_project/: .gitignore
Tool_project/3D Assets/: Compass.fbx
Tool_project/Animations/: ALTITUDE BOTTOM FIx  ALTITUDE TOP FIX  Airspeed Value Fix Animation  Ambient - COLOR_A  Ambient - COLOR_A_1  Ambient - COLOR_A_2  Ambient - COLOR_B  Ambient - COLOR_B_1  Ambient - COLOR_B_2  Ambient - COLOR_G  Ambient - COLOR_G_1  Ambient - COLOR_G_2  Ambient - COLOR_R  Ambient - COLOR_R_1  Ambient - COLOR_R_2  Cursor Fix Animation  DEMO Airspeed  DEMO Altitude Animation  DEMO Battery Volts Animation  DEMO Engine Oil Temp  DEMO Engine Pressure  DEMO Fuel  DEMO Genertaor Amps  DEMO Number Rotation  DEMO PItch Degree  DEMO Pitch Up Down  DEMO TACHO Value Controller  DEMO Tacho Gauge Value  DEMO VSI Amount  Fuel Fix Animation  HILL LOGO Startup Opacity  Node3D.LayoutTransformation - ROTATION_X  Node3D.LayoutTransformation - ROTATION_Z  Node3D.LayoutTransformation - TRANSLATION_X  Node3D.LayoutTransformation - TRANSLATION_Y  Node3D.LayoutTransformation - TRANSLATION_Z  TACHO Meter Fix  TACHO Needle Rotation Fix  VSI Rotation Animation  VSI Text Offset Animation  (+1 more)
Tool_project/MeshData/: ALTITUDE GAUGE BOTTOM  ALTITUDE GAUGE TOP  Airspeed Gauge  Back Circle  Buildings  Circle  Compass_AngleValue  GUI_AH_TopCircle  GUI_Compass_AngleBG  GUI_Compass_AngleValue_Plate  GUI_Compass_BGCircle  GUI_Compass_Large_Ticks  GUI_Compass_TopCircle  GUI_PitchDegree_Lines  Numbers  TACHO Gauge  Terrain_split2  Terrain_split2_1  Text  Ticks  TopCircle  UI  Warning Gradient  Warning_Left  Warning_Rght  Warning_Top
Tool_project/SourceAssets/: 3D_UI_Masters.psd  (+1 more)
(+96 files in other folders)
